# vbook

./: .coverage  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  vbook.yaml
.claude/: settings.local.json
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_RTX4090.md  DEPLOYMENT_WINDOWS.md  DEVELOPER_GUIDE.md  PROJECT_OVERVIEW.md  PROJECT_PLAN.md  README.md  TESTING.md  USER_GUIDE.md  work-status-2026-03-27.md
docs/plans/: 2026-03-20-documentation-design.md  2026-03-20-vbook-design.md  2026-03-20-vbook-implementation-plan.md  2026-03-26-glossary-proofread-design.md  2026-03-26-glossary-proofread-plan.md  2026-03-26-logging-system.md  2026-03-26-smart-screenshot-design.md  2026-03-27-ocr-editable-ppt-design.md
glossary/: investment.yaml
src/vbook/backends/: base.py
src/vbook/backends/llm/: litellm_backend.py
src/vbook/backends/stt/: whisper.py  whisper_remote.py
src/vbook/cli/: init_cmd.py  main.py  process.py  status.py
src/vbook/config/: loader.py  schema.py
src/vbook/output/: markdown.py  mindmap.py  pptx_generator.py  prompts.py
src/vbook/output/templates/: summary.md.j2
src/vbook/pipeline/: engine.py  stage.py  tracker.py
src/vbook/stages/: analyze.py  audio_extract.py  generate.py  proofread.py  scene_detect.py  screenshot.py  transcribe.py
src/vbook/utils/: glossary.py  image_similarity.py  logger.py  path.py  retry.py  scene_detector.py
test_output/test_sample/: summary.md
test_output/test_sample/.vbook_cache/: analysis.json  transcript.json
tests/: test_backends.py  test_cli.py  test_cli_process.py  test_cli_script_entry.py  test_config.py  test_glossary.py  test_image_similarity.py  test_logger.py  test_mindmap.py  test_output.py  test_pipeline.py  test_pptx.py  test_proofread.py  test_scene_detect_stage.py  test_scene_detector.py  test_stages.py  test_utils_path.py
