[project]
name = "vbook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.1",
    "faster-whisper>=1.2.1",
    "ffmpeg-python>=0.2.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "litellm>=1.82.4",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pydantic>=2.12.5",
    "python-pptx>=0.6.23",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
]

[project.scripts]
vbook = "vbook.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
